policy-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sazurev1blockresource
spec:
  crd:
    spec:
      names:
        kind: K8sAzureV1BlockResource
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sazurev1blockresource

        violation[{"msg": msg}] {
          obj := input.review.object
          not is_allowed(obj)
          namespace := fetch_namespace(obj)
          msg := sprintf("%v resource except default in namespace %v is not allowed, name: %v", [obj.kind, namespace, obj.metadata.name])
        }

        is_allowed(obj) {
          obj.kind == "Service"
          obj.spec.type == "LoadBalancer"
        }

        is_allowed(obj) {
          obj.kind == "Service"
          obj.spec.type== "NodePort"
        }
